Added lasagna recipe.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Home | Odin Recipes</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <p>Here are a few simple recipes to try if you're feeling hungry.</p>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        </ul>
     </body>
 </html>
