Added carbonara and spaghetti recipes, with images. Updated README.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <p>Here are a few simple recipes to try if you're feeling hungry.</p>
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
+            <li><a href="./recipes/carbonara.html">Carbonara</a></li>
         </ul>
     </body>
 </html>
