Added height attributes to recipe page images.

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1 id="top">Lasagna</h1>
-        <img src="../img/carbonara.jpeg" alt="Simple carbonara recipe." width="300px">
+        <img src="../img/carbonara.jpeg" alt="Simple carbonara recipe." width="300px" height="auto">
         <h2>Description</h2>
         <p>Humble ingredients—eggs, noodles, cheese, and pork—combine to create glossy, glorious pasta carbonara. It's the no-food-in-the-house dinner of our dreams.</p>
         <h2>Ingredients</h2>
