--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1 id="top">Lasagna</h1>
-        <img src="../img/spaghetti.webp" alt="Simple spaghetti recipe." width="300px">
+        <img src="../img/spaghetti.webp" alt="Simple spaghetti recipe." width="300px" height="auto">
         <h2>Description</h2>
         <p>This Easy Spaghetti Recipe is ready in just 15 minutes and is a hearty, comforting meal during cooler months. Pair with a side salad or steamed veggies for a full meal and enjoy!</p>
         <h2>Ingredients</h2>
