--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1 id="top">Lasagna</h1>
-        <img src="../img/lasagna.jpeg" alt="Simple lasagna recipe." width="300px">
+        <img src="../img/lasagna.jpeg" alt="Simple lasagna recipe." width="300px" height="auto">
         <h2>Description</h2>
         <p>Homemade Lasagna is a classic that every cook should have in their rotation. Tender sheets of pasta, a cheese filling, and a rich meaty tomato sauce make the perfect dish!</p>
         <p>While there are a few steps to this recipe, it’s easy to make and has huge flavor. This dish can be made ahead of time and freezes well either before or after baking!</p>
