--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Spaghetti | Odin Recipes</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <h1 id="top">Lasagna</h1>
